# bioinf2015

./: .gitignore  CMakeLists.txt  Makefile  README.md
scripts/: bruteforce.py  run_simple.sh  subseqs.py
src/: CMakeLists.txt  input_util.cc  input_util.h  main.cc  memer.cc  reference_string.cc  reference_string.h  suffix_array.cc  types.h
src/SA/: sa.h  sa_is.cc  sa_is.h  sparse_sa.cc  sparse_sa.h
src/mem/: interval_search.cc  interval_search.h  mem.h  mem_impl.cc  mem_impl.h  suffix_link.cc  suffix_link.h
src/programs/: memer.cc  sa_checker.cc  suffix_array.cc
src/sa/: sa.h  sa_is.cc  sa_is.h  sparse_sa.cc  sparse_sa.h
test/: bruteforce.py  subseqs.py
